@@ -7,21 +7,24 @@ Lib:
 * Try to make own (faster) implementation of sha256 and rimp160
 
 Client:
-* Download missging blocks from www, also for testnet
 * Monitor: at slow connections it gets stuck (new blocks stop being downloaded). Go to standby and come back.
 * Optionally use utils.GetBlockFromWeb() for initial blockchain download
 * Figure out a way to purge blocks that we got good headers for, but never managed to download the txs
 * Make "-nowallet" mode switchable without restarting the node.
 * WebUI to offer switching to "-trust -nowallet" mode while downloading many blocks.
-* Uodate mining API and implement "Child Pays for Parent Merged"
+* Update mining API and implement "Child Pays for Parent Merged"
 
 Wallet:
 * Implement "server mode", e.g. through TCP or serial connection
-* Write some automated tests
+* Write more automated tests
 
 Probably not to do:
 * Do not list unmatured coinbase outputs in the balance
 * Implement "mempool" network command
 
 Tools:
-* txaddsig - make it to work with multisig
+* txaddsig - make it to work with multisig and segwit
+* balio: make it work with LTC again  - see https://www.blockcypher.com/dev/bitcoin/#transactions
+	"https://api.blockcypher.com/v1/ltc/main/addrs/$ADDR?unspentOnly=true"
+	"https://api.blockcypher.com/v1/ltc/main/txs/$TXID?limit=1000&instart=1000&outstart=1000&includeHex=true"
+* balio: make it work with Testnet again - see testnet.blockexplorer.com
