@@ -7,7 +7,7 @@ import (
 	"encoding/hex"
 	"encoding/base64"
 	"github.com/piotrnar/gocoin/lib/btc"
-	"github.com/piotrnar/gocoin/lib/ltc"
+	"github.com/piotrnar/gocoin/lib/others/ltc"
 )
 
 
